feat(sync): reruns compatibility
