# openapi3.yaml
@@ -165,6 +165,12 @@ paths:
               properties:
                 rerunId:
                   $ref: '#/components/schemas/uniqueId'
+                startDate:
+                  type: string
+                  format: date-time
+              required:
+                - rerunId
+                - startDate
       operationId: rerunSync
       tags:
         - sync
@@ -234,7 +240,20 @@ paths:
         - entity
       responses:
         '201':
-          description: created
+          description: created result constiting the newly created and previously completed entity ids
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  created:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/entityId'
+                  previouslyCompleted:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/entityId'
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
